Implementing Google authentication for creating a new account or log in to the app. For that, there is few steps to do before creating new kotlin files. In console Firebase webpage, Google needs to be added as a new provider for Authentication, then, on Project configuration, a SHA1 certificate needs to be added. A new google-services.json must be download an added into app file so we have the web client id. After that, GoogleAuthManager.kt is created with functions for getting the data about the user such as email, givenName, familyName, etc in order to fulfill those fields onto User collection in Firebase. New implementations for build.gradle.kts, LoginScreen.kt, DailyStepsAssignment.kt and NavigationWrapper.kt are modified for correct functioning.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FitnessTracker</string>
+    <string name="default_web_client_id">785964388891-cb2a5rrvskajagr5gvcpe38lpukaoian.apps.googleusercontent.com</string>
 </resources>
